Address looping search, visual issues with bottom of events table (#4202)
* exiting early if we know we have all the results

* tidying up UI, updating message, providing messaging some space so no overlap

--- a/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
+++ b/investigate-events/app/styles/investigate-events/components/_investigate-events-table.scss
@@ -276,6 +276,7 @@
     }
   }
 }
+
 .download-dropdown {
   width: auto !important;
   min-width: 218px !important;
@@ -290,3 +291,7 @@
     }
   }
 }
+
+.events-table-footer-status {
+  margin-top: 50px
+};
